tests/render_snapshots/snapshots/render_snapshots__confirm_dialogs__confirm_dialog_update_preview_jsonb_key_order_normalized.snap
---
source: tests/render_snapshots/confirm_dialogs.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                       
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│> public.us╭ Confirm UPDATE: users ───────────────────────────────╮───────────┐
│  public.po│                                                      │           │
│  public.co│ ✓ LOW RISK                                           │           │
│           │                                                      │           │
│           │ Diff                                                 │           │
│           │   target_audience:                                   │           │
│           │     ...                                              │           │
│           │         "100-500",                                   │           │
│           │   -     "500+"                                       │           │
│           │   +     "600+"                                       │───────────┘
│           │       ],                                             │───────────┐
│           │     ...                                              │           │
│           │                                                      │           │
│           │ SQL Preview                                          │           │
│           │   UPDATE "public"."users"                            │           │
│           │   SET "target_audience" =                            │           │
│           │ '{"company_size":["100-500","600+"],"industries":["t │           │
│           │ echnology","finance"]}'                              │           │
│           │                                                      │           │
└───────────╰ Enter: Confirm │ Esc/q: Cancel ──────────────────────╯───────────┘
