tests/render_snapshots/snapshots/render_snapshots__confirm_dialogs__confirm_dialog_update_preview_jsonb_structured_diff_with_ellipsis.snap
---
source: tests/render_snapshots/confirm_dialogs.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                       
┌ [1] Explor╭ Confirm UPDATE: users ───────────────────────────────╮            
│> public.us│                                                      │───────────┐
│  public.po│ ✓ LOW RISK                                           │           │
│  public.co│                                                      │           │
│           │ Diff                                                 │           │
│           │   config:                                            │           │
│           │     ...                                              │           │
│           │         "nested_a": "unchanged",                     │           │
│           │   -     "nested_b": "old_value",                     │           │
│           │   +     "nested_b": "new_value",                     │           │
│           │         "nested_c": "unchanged"                      │───────────┘
│           │     ...                                              │───────────┐
│           │                                                      │           │
│           │ SQL Preview                                          │           │
│           │   UPDATE "public"."users"                            │           │
│           │   SET "config" = '{"alpha": 1, "beta": 2, "gamma":   │           │
│           │ 3, "delta": 4, "epsilon": 5, "zeta": {"nested_a":    │           │
│           │ "unchanged", "nested_b": "new_value", "nested_c":    │           │
│           │ "unchanged"}, "eta": 7, "theta": 8}'                 │           │
│           │   WHERE "id" = '1';                                  │           │
└───────────│                                                      │───────────┘
            ╰ Enter: Confirm │ Esc/q: Cancel ──────────────────────╯
