tests/render_snapshots/snapshots/render_snapshots__confirm_dialogs__confirm_dialog_update_preview_long_jsonb.snap
---
source: tests/render_snapshots/confirm_dialogs.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                       
┌ [1] Explor╭ Confirm UPDATE: users ───────────────────────────────╮            
│> public.us│                                                      │───────────┐
│  public.po│ ✓ LOW RISK                                           │           │
│  public.co│                                                      │           │
│           │ Diff                                                 │           │
│           │   metadata:                                          │           │
│           │     {                                                │           │
│           │   -   "company_size": "enterprise",                  │           │
│           │   +   "company_size": "startup",                     │           │
│           │       "industries": [                                │           │
│           │         "tech",                                      │───────────┘
│           │   -     "finance",                                   │───────────┐
│           │   -     "healthcare"                                 │           │
│           │   +     "retail"                                     │           │
│           │       ],                                             │           │
│           │       "preferences": {                               │           │
│           │   -     "notifications": true,                       │           │
│           │   -     "theme": "dark"                              │           │
│           │   +     "language": "ja",                            │           │
│           │   +     "notifications": false,                      │           │
└───────────│                                                      │───────────┘
            ╰ Enter: Confirm │ Esc/q: Cancel ──────────────────────╯
