tests/render_snapshots/snapshots/render_snapshots__confirm_dialogs__confirm_dialog_update_preview_narrow_terminal.snap
---
source: tests/render_snapshots/confirm_dialogs.rs
expression: output
---
test_project | test_db | - | no dsn | lo
┌╭ Confirm UPDATE: users ─────────────╮]
││                                    │┐
││ ✓ LOW RISK                         ││
││                                    ││
││ Diff                               │┘
││   metadata:                        │┐
││     {                              ││
││   -   "company_size":              ││
││                                    ││
└╰ Enter: Confirm │ Esc/q: Cancel ────╯┘
